Minature correction on java ai services - switch to binary image upload